changed scrolloverflow to activate only on screens wider than 670 and fixed down btn bugs in safari

--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -363,7 +363,11 @@ h1 {
   font-size: 2em;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  border-radius: 25px;
+  span{
+    display: flex;
+    justify-content: center;
+  }
   &:focus {
     outline: none;
   }
@@ -602,8 +606,8 @@ form {
 
 .contact-button {
   position: relative;
-  width: 160px;
-  height: 50px;
+  min-width: 175px;
+  min-height: 80px;
   background: none;
   border: none;
   margin: 20px auto 0 auto;
